--- a/module2-solution/css/styles.css
+++ b/module2-solution/css/styles.css
@@ -13,7 +13,7 @@ p {
   height: 150px;
   margin-right: auto;
   margin-left: auto;
-  font-family: Helvetica;
+  font-family: "Comic Sans MS";
   color: white;
 }
 
