--- a/module2-solution/css/styles.css
+++ b/module2-solution/css/styles.css
@@ -3,17 +3,17 @@
   box-sizing: border-box;
 }
 h1 {
-  /*margin-bottom: 15px;*/
+  margin-bottom: 15px;
 }
 
 p {
   border: 1px solid black;
-  background-color: #A52A2A;
+  background-color: #A52A2A; /* Color granate */
   width: 90%;
   height: 150px;
   margin-right: auto;
   margin-left: auto;
-  font-family: "Comic Sans MS";
+  font-family: "Helvetica";
   color: white;
 }
 
