--- a/module2-solution/css/styles.css
+++ b/module2-solution/css/styles.css
@@ -25,7 +25,7 @@ section {
   }
 
 #section1 {
-  background-color: #8B008B;
+  /*background-color: #8B008B*/;
 }
 #section2 {
   background-color: #DEB887;
@@ -37,9 +37,10 @@ section {
 }
 
 /********** Large devices only **********/
-@media (min-width: 1200px) {
+@media (min-width: 1001px) {
   #section1 {
     width: 90%;
+    background-color: #8B008B
   }
   #section2 {
     width: 50%;
@@ -47,15 +48,9 @@ section {
 }
 
 /********** Medium devices only **********/
-@media (min-width: 992px) and (max-width: 1199px) {
+@media (min-width: 800px) and (max-width: 1000px) {
   ##section1 {
     width: 50%;
-  }
-  #p2 {
-    width: 100px;
-    height: 100px;
-  }
-  body {
-    background-color: blue;
+    background-color: #FF8C00
   }
 }
