--- a/module2-solution/css/styles.css
+++ b/module2-solution/css/styles.css
@@ -21,7 +21,7 @@ p {
 
 section {
   border: 1px solid black;
-  background-color:  #8B008B; /* Color violeta */
+  /*background-color:  #8B008B; /* Color violeta */
   }
 
 #section1 {
@@ -49,7 +49,7 @@ section {
 
 /********** Medium devices only **********/
 @media (min-width: 800px) and (max-width: 1000px) {
-  ##section1 {
+  #section1 {
     width: 50%;
     background-color: #FF8C00
   }
