--- a/module2-solution/css/styles.css
+++ b/module2-solution/css/styles.css
@@ -19,6 +19,11 @@ p {
   color: white;
 }
 
+.col-md-1{
+    float: left;
+    border: 1px solid green;
+  }
+
 section {
   border: 1px solid black;
   /*background-color:  #8B008B; /* Color violeta */
