--- a/module2-solution/css/styles.css
+++ b/module2-solution/css/styles.css
@@ -24,24 +24,28 @@ p {
   width: 100%;
 }
 
-/********** Large devices only **********/
-@media (min-width: 1001px) {
-  .col-md-1{
+.col-md-1{
     float: left;
     border: 1px solid green;
   }
+
+/********** Large devices only **********/
+@media (min-width: 992px) {
   .col-md-1 {
-    width: 8.33%;
+    width: 33%;
   }
 }
 
 /********** Medium devices only **********/
-@media (min-width: 800px) and (max-width: 1000px) {
-  .col-md-1{
-    float: left;
-    border: 1px solid green;
-  }
+@media (min-width: 768px) and (max-width: 991px) {
   .col-md-1 {
-    width: 8.33%;
+    width: 50%;
+  }
+}
+
+/********** Medium devices only **********/
+@media (max-width: 767px) {
+  .col-md-1 {
+    width: 100%;
   }
 }
