--- a/module2-solution/css/styles.css
+++ b/module2-solution/css/styles.css
@@ -8,27 +8,16 @@ h1 {
   text-align: center;
 }
 
-p {
-  border: 1px solid black;
-  background-color: #A52A2A; /* Color granate */
-  width: 90%;
-  height: 150px;
-  margin-right: auto;
-  margin-left: auto;
-  font-family: Helvetica;
-  color: white;
-}
-
 /* Simple Responsive Framework. */
 .row {
   width: 100%;
   margin-bottom: 15px;
-
 }
 
 .col-md-1{
     float: left;
     border: 1px solid green;
+    background-color: #A52A2A;
   }
 
 /********** Large devices only **********/
