--- a/module2-solution/css/styles.css
+++ b/module2-solution/css/styles.css
@@ -12,6 +12,7 @@ h2 {
   text-align: right;
   position: relative;
   margin-right: 5px;
+  border: 3px solid white;
 }
 
 /* Simple Responsive Framework. */
