Añadido diseño de div para el title de las cajitas

--- a/module2-solution/css/styles.css
+++ b/module2-solution/css/styles.css
@@ -29,6 +29,12 @@ h2 {
     background-color: #A52A2A;
   }
 
+  .col-md-2{
+    float: right;
+    border: 1px solid green;
+    background-color: #A52A2A;
+  }
+
 /********** Large devices only **********/
 @media (min-width: 992px) {
   .col-md-1 {
