--- a/module2-solution/css/styles.css
+++ b/module2-solution/css/styles.css
@@ -30,9 +30,9 @@ h2 {
   }
 
   .col-md-2{
-    float: right;
     border: 1px solid green;
     background-color: #A52A2A;
+    text-align: right;
   }
 
 /********** Large devices only **********/
