--- a/module2-solution/css/styles.css
+++ b/module2-solution/css/styles.css
@@ -30,10 +30,11 @@ h2 {
   }
 
   .col-md-2{
+    position: relative;
+    right: : 65px;
     width: 50px;
     border: 2px solid green;
     background-color: #A52A2A;
-    text-align: right;
   }
 
 /********** Large devices only **********/
