--- a/module2-solution/css/styles.css
+++ b/module2-solution/css/styles.css
@@ -13,6 +13,8 @@ h2 {
   position: relative;
   margin-right: 5px;
   border: 3px solid white;
+  top: 65px;
+  left: 65px;
 }
 
 /* Simple Responsive Framework. */
