Añadido diseño de div para el title de las cajitas

--- a/module2-solution/css/styles.css
+++ b/module2-solution/css/styles.css
@@ -13,7 +13,7 @@ h2 {
   position: relative;
   margin-right: 5px;
   border: 3px solid white;
-  right: 65px;
+  text-align: right;
 }
 
 /* Simple Responsive Framework. */
