--- a/module2-solution/css/styles.css
+++ b/module2-solution/css/styles.css
@@ -15,6 +15,7 @@ h2 {
   margin-right: 5px;
   border: 3px solid white;
   text-align: right;
+  margin-bottom: 15px;
 }
 
 /* Simple Responsive Framework. */
