--- a/module2-solution/css/styles.css
+++ b/module2-solution/css/styles.css
@@ -16,6 +16,19 @@ h2 {
   text-align: right;
   margin-bottom: 15px;
 }
+p {
+  width: 50px;
+  height: 50px;
+  border: 1px solid black;
+  margin-bottom: 15px;
+  border: 3px solid white;
+}
+#p1 {
+  background-color: #A52A2A;
+  position: relative;
+  top: 65px;
+  left: 65px;
+}
 
 /* Simple Responsive Framework. */
 .row {
