Añadido diseño de div para el title de las cajitas

--- a/module2-solution/css/styles.css
+++ b/module2-solution/css/styles.css
@@ -24,7 +24,7 @@ p {
   background-color: #A52A2A;
   position: relative;
   top: 5px;
-  right: 50px;
+  left: 150px;
 }
 
 /* Simple Responsive Framework. */
