--- a/module2-solution/css/styles.css
+++ b/module2-solution/css/styles.css
@@ -12,7 +12,7 @@ h2 {
   width: 100px;
   margin-right: 5px;
   border: 3px solid white;
-  text-align: right;
+  text-align: left;
   margin-bottom: 15px;
 }
 p {
@@ -24,7 +24,7 @@ p {
   background-color: #A52A2A;
   position: relative;
   top: 5px;
-  left: 70%;
+  left: 100%;
 }
 
 /* Simple Responsive Framework. */
