--- a/module2-solution/css/styles.css
+++ b/module2-solution/css/styles.css
@@ -39,9 +39,18 @@ p {
     background-color: #A52A2A;
   }
 
+  .col-md-3{
+    float: left;
+    border: 2px solid white;
+    background-color: #A52A2A;
+  }
+
 /********** Large devices only **********/
 @media (min-width: 992px) {
   .col-md-1 {
+    width: 33%;
+  }
+  .col-md-3 {
     width: 33%;
   }
 }
@@ -51,11 +60,17 @@ p {
   .col-md-1 {
     width: 50%;
   }
+  .col-md-3 {
+    width: 50%;
+  }
 }
 
 /********** Medium devices only **********/
 @media (max-width: 767px) {
   .col-md-1 {
     width: 100%;
+  }
+  .col-md-3 {
+    width: 33%;
   }
 }
