--- a/module2-solution/css/styles.css
+++ b/module2-solution/css/styles.css
@@ -50,6 +50,16 @@ p {
     background-color: #A52A2A;
     height: 20%;
   }
+  .col-md-2{
+    font-family: Arial, Helvetica, sans-serif;
+    color: #0000ff;
+    font-style: italic;
+    font-weight: bold;
+    font-size: 24px;
+    float: left;
+    background-color: #A52A2A;
+    height: 20%;
+  }
 
 /********** Large devices only **********/
 @media (min-width: 992px) {
@@ -57,6 +67,9 @@ p {
     width: 33%;
   }
   .col-md-3 {
+    width: 33%;
+  }
+  .col-md-2 {
     width: 33%;
   }
 }
@@ -69,6 +82,9 @@ p {
   .col-md-3 {
     width: 33%;
   }
+  .col-md-2 {
+    width: 33%;
+  }
 }
 
 /********** Medium devices only **********/
@@ -77,6 +93,9 @@ p {
     width: 100%;
   }
   .col-md-3 {
+    width: 33%;
+  }
+  .col-md-2 {
     width: 33%;
   }
 }
