--- a/module2-solution/css/styles.css
+++ b/module2-solution/css/styles.css
@@ -35,8 +35,9 @@ p {
 
 .col-md-1{
     float: left;
-    border: 1px solid green;
-    background-color: #A52A2A;
+    border: 1px solid black;
+    background-color: #9400D3; /* DarkViolet */
+    color: #ffffff; /* White */
   }
 
   .col-md-3{
