--- a/module2-solution/css/styles.css
+++ b/module2-solution/css/styles.css
@@ -36,6 +36,7 @@ p {
 .col-md-1{
     float: left;
     border: 1px solid black;
+    font-family: "Lucida Console";
     background-color: #9400D3; /* DarkViolet */
     color: #ffffff; /* White */
   }
