--- a/module2-solution/css/styles.css
+++ b/module2-solution/css/styles.css
@@ -39,7 +39,7 @@ p {
     font-family: Verdana;
     font-size: 18px;
     background-color: #9400D3; /* DarkViolet */
-    color: #ffffff; /* White */
+    color: #000000; /* White */
   }
 
   .col-md-3{
