--- a/module2-solution/css/styles.css
+++ b/module2-solution/css/styles.css
@@ -39,18 +39,18 @@ p {
     font-family: Verdana;
     font-size: 18px;
     background-color: #9400D3; /* DarkViolet */
-    color: #000000; /* White */
+    color: #000000; /* Black */
   }
 
   .col-md-3{
     font-family: Arial, Helvetica, sans-serif;
-    color: #0000ff;
-    font-style: italic;
+    color: #000000; /* Black */
+    font-style: italic; 
     font-weight: bold;
     font-size: 24px;
     float: left;
     border: 2px solid white;
-    background-color: #9400D3; /* DarkViolet */
+    background-color: #FF8C00; /* DarkOrange */
     height: 20%;
   }
   .col-md-2{
