--- a/module2-solution/css/styles.css
+++ b/module2-solution/css/styles.css
@@ -49,9 +49,10 @@ p {
     font-weight: bold;
     font-size: 24px;
     float: left;
-    border: 2px solid white;
+    border: 2px solid #DAA520; /* Golden Rod */
     background-color: #FF8C00; /* DarkOrange */
     height: 20%;
+    text-align: right;
   }
   .col-md-2{
     font-family: Arial, Helvetica, sans-serif;
