--- a/module2-solution/css/styles.css
+++ b/module2-solution/css/styles.css
@@ -49,7 +49,7 @@ p {
     font-weight: bold;
     font-size: 24px;
     float: left;
-    border: 2px solid #DAA520; /* Golden Rod */
+    border: 2px solid #ffffff; /* Golden Rod */
     background-color: #FF8C00; /* DarkOrange */
     height: 20%;
     text-align: right;
