Añadido nuevos colores a las columnas

--- a/module2-solution/css/styles.css
+++ b/module2-solution/css/styles.css
@@ -38,7 +38,7 @@ p {
     border: 3px solid black;
     font-family: Verdana;
     font-size: 18px;
-    background-color: #9400D3; /* DarkViolet */
+    background-color: #CD5C5C; /* Indian Red */
     color: #000000; /* Black */
   }
 
